devops/gke-config/deployment.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-handson-deployment
spec:
  selector:
    matchLabels:
      app: devops-handson
  replicas: 2
  template:
    metadata:
      labels:
        app: devops-handson
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: dohandson-key
      containers:
      - name: myapp
        image: gcr.io/FIXME/devops-handson:v1
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: devops-handson
spec:
  type: NodePort
  selector:
    app: devops-handson
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devops-handson-ingress
spec:
  backend:
    serviceName: devops-handson
    servicePort: 8080
